# Tombo

./: README.md  config.py  pyproject.toml  tombo.db
helpers/: token.py
login/: app.py  segurity.py
routes/: user.py
scripts/: banco.ipynb
tests/: commands.sh
tombo/: main.py
tombo/helpers/: myhash.py
tombo/routes/: __init__.py  login.py  material.py  tombo.py
